fixed some CSS that was breaking titles on smaller screens and cleaned up CSS

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -38,7 +38,6 @@ header ul {
     justify-content: space-evenly;
     font-size: 125%;
     gap: 50px;
-    /* min-width: 500px; */
 }
 
 .topnav a {
@@ -103,20 +102,19 @@ h2 {
     text-align: right;
     color: var(--darkblue);
     padding: 0% 1% 0% 0%;
-
-    width: 20%;
+    flex-basis: 20%;
 }
 
 p {
     padding: 0% 3%;
-    width: 80%;
+    flex-basis: 80%;
 }
 
 /* Work section images */
 .imgs-container{
     display: flex;
     flex-wrap: wrap;
-    width: 80%;
+    flex-basis: 80%;
     padding-left: 2%;
 }
 
@@ -162,16 +160,8 @@ p {
     margin: 0px 15px 10px;
 }
 
-/* surf img */
-.surf-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.5;
-}
-
-/* other 4 imgs */
-.quad-img {
+/* sizing for img to fit box */
+.size-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -190,7 +180,6 @@ img:hover {
 }
 
 .bottomnav ul li a:link {
-    /* text-decoration: none; */
     color: var(--darkblue);
 }
 
@@ -203,7 +192,7 @@ img:hover {
 }
 
 .bottomnav {
-    width: 80%;
+    flex-basis: 80%;
 }
 
 .bottomnav ul {
